--- a/style.css
+++ b/style.css
@@ -42,3 +42,27 @@ body {
   border: 4px solid #000;
   box-sizing: border-box;
 }
+
+.square {
+  width: 100px;
+  height: 100px;
+  background-color: #e74c3c;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 180px;
+  left: 30px;
+  border: 4px solid #000;
+  box-sizing: border-box;
+}
+
+.square2 {
+  width: 100px;
+  height: 100px;
+  background-color: #e74c3c;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 75px;
+  left: 130px;
+  border: 4px solid #000;
+  box-sizing: border-box;
+}
