--- a/style.css
+++ b/style.css
@@ -103,3 +103,14 @@ body {
   border: 4px solid #000;
   box-sizing: border-box;
 }
+
+.bed {
+  width: 200px;
+  height: 480px;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  top: 20%;
+  right: 1%;
+  border: 4px solid #000;
+  box-sizing: border-box;
+}
