--- a/style.css
+++ b/style.css
@@ -123,3 +123,29 @@ body {
   left: 50%;
   transform: translateX(-50%);
 }
+
+@media screen and (max-width: 583px) {
+  .container {
+    padding: 20px;
+  }
+  .rectangle {
+    padding: 10px;
+  }
+}
+@media screen and (min-width: 583px) and (max-width: 900px) {
+  .container {
+    padding: 20px;
+  }
+  .rectangle {
+    padding: 10px;
+  }
+}
+
+@media screen and (min-width: 901px) {
+  .container {
+    padding: 20px;
+  }
+  .rectangle {
+    padding: 10px;
+  }
+}
